@@ -1,5 +1,10 @@
 2004-09-27  Bart Hakvoort  <gparted@users.sf.net>
 
+	*	include/Win_GParted.h,
+		src/Win_GParted.cc: changed representation of hardisk info
+
+2004-09-27  Bart Hakvoort  <gparted@users.sf.net>
+
 	*	src/Partition.cc: marked "Unallocated" for translatation
 
 2004-09-26  Bart Hakvoort  <gparted@users.sf.net>
